# cosmic-applet-spotify

./: .gitignore  CHANGELOG.md  COPYING  Cargo.toml  README.md  com.example.CosmicAppletSpotify.yml  io.github.snowjademusic.CosmicAppletSpotify.yml  release-plz.toml
.cargo/: config.toml
.github/workflows/: release-flatpak.yml  release-plz.yml
data/: com.example.CosmicAppletSpotify.desktop  io.github.snowjademusic.CosmicAppletSpotify.desktop  io.github.snowjademusic.CosmicAppletSpotify.metainfo.xml
repo/: summary  summary.idx
repo/refs/heads/app/io.github.snowjademusic.CosmicAppletSpotify/x86_64/: master
repo/refs/heads/runtime/io.github.snowjademusic.CosmicAppletSpotify.Debug/x86_64/: master
repo/summaries/: a67987178214bf6200d3ed5a437bd1454978979a5951194b07504fe3ffaa6f0a-2ae8f773f8308e198f68e26dc35aea40c59ef5b2eafdab1147559a9afae6257b.delta  c14fc481d217cd15874db51f47de4581d3a298a3f910c4cbb1427b4bdff10fdd-2ae8f773f8308e198f68e26dc35aea40c59ef5b2eafdab1147559a9afae6257b.delta  fd059fe615451b5dbeaa753672588bf0e25cb9895491116c3a9a8daef7f4022f-2ae8f773f8308e198f68e26dc35aea40c59ef5b2eafdab1147559a9afae6257b.delta
src/: main.rs
