[package]
name = "cosmic-applet-spotify"
version = "0.1.0"
edition = "2024"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", rev = "main", features = ["applet"] }
mpris = "2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }