[package]
name = "cosmic-applet-spotify"
version = "1.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/snowjademusic/cosmic-applet-spotify"
homepage = "https://github.com/snowjademusic/cosmic-applet-spotify"
exclude = [".cargo/*", "vendor/*"]

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet", "tokio"] }
mpris = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }

